--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,6 @@
 ﻿<!doctype html>
 
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" ng-app="spirograph">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,28 +11,10 @@
 </head>
 <body class="spirograph">
 
-    <div ng-view></div>
-
     <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-cookies/angular-cookies.js"></script>
-    <script src="bower_components/angular-resource/angular-resource.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-    <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
-    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/d3/d3.js" class="ignored"></script>
 
-    <script src="scripts/app.js"></script>
-    <script src="scripts/modules.js"></script>
-    <script src="scripts/services/services.js"></script>
-    <script src="scripts/filters/filters.js"></script>
-    <script src="scripts/directives/directives.js"></script>
-
-    <!--Controllers-->
-    <script src="scripts/controllers/MainController.js"></script>
-    <!--/Controllers-->
-
+    <script src="scripts/gear.js"></script>
     <script src="scripts/playground.js"></script>
 
 </body>
