--- a/app/index.html
+++ b/app/index.html
@@ -14,8 +14,13 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/d3/d3.js" class="ignored"></script>
 
-    <script src="scripts/gear.js"></script>
-    <script src="scripts/playground.js"></script>
+    <script src="scripts/Shapes/Gear.js"></script>
+    <script src="scripts/Shapes/RingGear.js"></script>
+
+    <script src="scripts/SvgCommands/M.js"></script>
+    <script src="scripts/SvgCommands/A.js"></script>
+
+    <script src="scripts/application.js"></script>
 
 </body>
 </html>
