--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -17,6 +17,8 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/d3/d3.js"></script>
 
+    <script src="scripts/utility.js"></script>
+
     <script src="scripts/Shapes/Gear.js"></script>
     <script src="scripts/Shapes/RingGear.js"></script>
 
