gear generator working

--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -14,16 +14,22 @@
 </head>
 <body class="spirograph">
 
+    <p style="width:100%; text-align:center">something</p>
+
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/d3/d3.js"></script>
 
     <script src="scripts/utility.js"></script>
 
+    <script src="scripts/SVG/PathBuilder.js"></script>
+    <script src="scripts/SVG/PathCommand.js"></script>
+    <script src="scripts/SVG/MCommand.js"></script>
+    <script src="scripts/SVG/ACommand.js"></script>
+    <script src="scripts/SVG/LCommand.js"></script>
+    <script src="scripts/SVG/ZCommand.js"></script>
+
     <script src="scripts/Shapes/Gear.js"></script>
     <script src="scripts/Shapes/RingGear.js"></script>
-
-    <script src="scripts/SvgCommands/M.js"></script>
-    <script src="scripts/SvgCommands/A.js"></script>
 
     <script src="scripts/app.js"></script>
 
