--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -65,6 +65,8 @@
     <script src="scripts/SVG/LCommand.js"></script>
     <script src="scripts/SVG/ZCommand.js"></script>
 
+    <script src="scripts/Shapes/GearOptions.js"></script>
+    <script src="scripts/Shapes/GearOptionsFactory.js"></script>
     <script src="scripts/Shapes/Gear.js"></script>
     <script src="scripts/Shapes/RingGear.js"></script>
 
