initial drawing working

--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -31,10 +31,13 @@
     <script src="scripts/SVG/LCommand.js"></script>
     <script src="scripts/SVG/ZCommand.js"></script>
 
+    <script src="scripts/Shapes/HoleOptions.js"></script>
     <script src="scripts/Shapes/GearOptions.js"></script>
     <script src="scripts/Shapes/GearOptionsFactory.js"></script>
     <script src="scripts/Shapes/Gear.js"></script>
     <script src="scripts/Shapes/RingGear.js"></script>
+    <script src="scripts/Shapes/RingGearOptionsFactory.js"></script>
+    <script src="scripts/Shapes/RingGearRotater.js"></script>
 
     <script src="scripts/app.js"></script>
 
