refactored hole generation to own class

--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -14,6 +14,7 @@
 
 </head>
 <body class="spirograph">
+    <a id="download-link">download image</a>
     <p style="" id="output"></p>
 
     <!--<canvas id="myCanvas" width="200" height="100" style="border:1px solid #000000;"></canvas>-->
@@ -32,6 +33,7 @@
     <script src="scripts/SVG/ZCommand.js"></script>
 
     <script src="scripts/Shapes/HoleOptions.js"></script>
+    <script src="scripts/Shapes/GearHoleGenerator.js"></script>
     <script src="scripts/Shapes/GearOptions.js"></script>
     <script src="scripts/Shapes/GearOptionsFactory.js"></script>
     <script src="scripts/Shapes/Gear.js"></script>
