added 'hide gears' option

--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -16,7 +16,7 @@
 <body class="spirograph">
     <a id="download-link">download image</a>
     <p style="" id="output"></p>
-    
+
     <div style="position: absolute; z-index: 10; width: 300px; margin-top:20px;">
         <form class="form-horizontal" role="form">
             <div class="form-group">
@@ -45,7 +45,12 @@
             </div>
             <div class="form-group">
                 <div class="col-sm-offset-1 col-sm-3">
-                    <div id="change-color-button" class="btn btn-default">Change color</div>
+                    <div id="change-color-button" class="btn btn-default">Change Color</div>
+                </div>
+            </div>
+            <div class="form-group" style="margin-top: 30px;">
+                <div class="col-sm-offset-1 col-sm-3">
+                    <div id="hide-gears-button" class="btn btn-default">Hide Gears</div>
                 </div>
             </div>
         </form>
