save to image kind of working

--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -14,7 +14,7 @@
 
 </head>
 <body class="spirograph">
-    <a id="download-link">download image</a>
+    <a id="download-link" target="_blank">download image</a>
     <p style="" id="output"></p>
 
     <div style="position: absolute; z-index: 10; width: 300px; margin-top:20px;">
