beam is now almost working

--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -17,7 +17,7 @@
     <a id="download-link" target="_blank">download image</a>
     <p style="" id="output"></p>
 
-    <div style="position: absolute; z-index: 10; width: 300px; margin-top:20px;">
+    <div style="position: absolute; z-index: 10; width: 300px; margin-top:20px; display: none;">
         <form class="form-horizontal" role="form">
             <div class="form-group">
                 <label class="col-sm-3 control-label">Red</label>
@@ -73,6 +73,7 @@
     <script src="scripts/SVG/ZCommand.js"></script>
 
     <script src="scripts/Shapes/HoleOptions.js"></script>
+    <script src="scripts/Shapes/TransformInfo.js"></script>
     <script src="scripts/Shapes/GearHole.js"></script>
     <script src="scripts/Shapes/GearHoleGenerator.js"></script>
     <script src="scripts/Shapes/GearOptions.js"></script>
@@ -81,6 +82,9 @@
     <script src="scripts/Shapes/RingGear.js"></script>
     <script src="scripts/Shapes/RingGearOptionsFactory.js"></script>
     <script src="scripts/Shapes/RingGearRotater.js"></script>
+    <script src="scripts/Shapes/BeamOptions.js"></script>
+    <script src="scripts/Shapes/BeamRotater.js"></script>
+    <script src="scripts/Shapes/Beam.js"></script>
 
     <script src="scripts/app.js"></script>
 
