added KeyboardShortcutManager static class

--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -17,7 +17,7 @@
     <a id="download-link" target="_blank">download image</a>
     <p style="" id="output"></p>
 
-    <div style="position: absolute; z-index: 10; width: 300px; margin-top:20px; display: none;">
+    <div style="position: absolute; z-index: 10; width: 300px; margin-top:20px;">
         <form class="form-horizontal" role="form">
             <div class="form-group">
                 <label class="col-sm-3 control-label">Red</label>
@@ -64,6 +64,8 @@
 
     <script src="scripts/Utility/utility.js"></script>
     <script src="scripts/Utility/changePenColorStyle.js"></script>
+
+    <script src="scripts/UI/KeyboardShortcutManager.js"></script>
 
     <script src="scripts/SVG/PathBuilder.js"></script>
     <script src="scripts/SVG/PathCommand.js"></script>
