--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -80,6 +80,7 @@
     <script src="scripts/Shapes/GearHoleGenerator.js"></script>
     <script src="scripts/Shapes/GearOptions.js"></script>
     <script src="scripts/Shapes/GearOptionsFactory.js"></script>
+    <script src="scripts/Shapes/GearRotater.js"></script>
     <script src="scripts/Shapes/Gear.js"></script>
     <script src="scripts/Shapes/RingGear.js"></script>
     <script src="scripts/Shapes/RingGearOptionsFactory.js"></script>
