added starting components for UI

--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -16,8 +16,10 @@
 <body class="spirograph">
     <a id="download-link" target="_blank">download image</a>
     <p style="" id="output"></p>
+    <div class="gear-options-selector"></div>
+    <div class="color-selector"></div>
 
-    <div style="position: absolute; z-index: 10; width: 300px; margin-top:20px;">
+    <!--<div style="position: absolute; z-index: 10; width: 300px; margin-top:20px;">
         <form class="form-horizontal" role="form">
             <div class="form-group">
                 <label class="col-sm-3 control-label">Red</label>
@@ -54,12 +56,11 @@
                 </div>
             </div>
         </form>
-    </div>
-
-    <!--<canvas id="myCanvas" width="200" height="100" style="border:1px solid #000000;"></canvas>-->
+    </div>-->
 
 
     <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="scripts/lib/jquery-ui.js"></script>
     <script src="bower_components/d3/d3.js"></script>
 
     <script src="scripts/Utility/utility.js"></script>
