--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -70,6 +70,8 @@
     <script src="scripts/lib/linq.js"></script>
     <script src="bower_components/d3/d3.js"></script>
 
+    <script src="scripts/EventAggregator.js"></script>
+
     <script src="scripts/Utility/utility.js"></script>
     <script src="scripts/Utility/changePenColorStyle.js"></script>
 
