started adding dark theme

--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -19,19 +19,19 @@
 
     <div id="gear-options-selector">
         <div class="fixed-container">
-            <p>fixed</p>
+            <p class="color-changing">fixed</p>
         </div>
         <div class="rotating-container">
-            <p>rotating</p>
+            <p class="color-changing">rotating</</p>
         </div>
     </div>
 
     <div id="color-selector">
         <div class="foreground-container">
-            <p>pen</p>
+            <p class="color-changing">pen</p>
         </div>
         <div class="background-container">
-            <p>background</p>
+            <p class="color-changing">background</p>
         </div>
     </div>
 
@@ -44,7 +44,7 @@
     <script src="scripts/Utility/utility.js"></script>
 
     <script src="scripts/Interaction/KeyboardShortcutManager.js"></script>
-    <script src="scripts/Interaction/change-pen-color.js"></script>
+    <script src="scripts/Interaction/change-color.js"></script>
 
     <script src="scripts/SVG/PathBuilder.js"></script>
     <script src="scripts/SVG/PathCommand.js"></script>
