initial dist build complete

--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -22,7 +22,7 @@
             <p class="color-changing">fixed</p>
         </div>
         <div class="rotating-container">
-            <p class="color-changing">rotating</</p>
+            <p class="color-changing">rotating</p>
         </div>
     </div>
 
