added favicon reference

--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -9,6 +9,7 @@
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="bower_components/fontawesome/css/font-awesome.css" rel="stylesheet" />
     <link href="styles/app.css" rel="stylesheet" />
+    <link class="dom_munger-ignore" rel="shortcut icon" href="favicon.ico" />
 
     <title>Spirograph</title>
 
