content is now always centered

--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -13,6 +13,8 @@
 
 </head>
 <body class="spirograph">
+    <button style="position: absolute; z-index: 50;" id="zoom-in">zoom in</button>
+    <button style="position: absolute; margin-left: 50px; z-index: 50;" id="zoom-out">zoom out</button>
     <a id="download-link" target="_blank">download image</a>
     <p style="" id="output"></p>
 
@@ -39,6 +41,7 @@
     <script src="bower_components/d3/d3.js"></script>
 
     <script src="scripts/EventAggregator.js"></script>
+    <script src="scripts/dimensions.js"></script>
 
     <script src="scripts/Utility/utility.js"></script>
 
