extracted zooming into helper script

--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -37,6 +37,7 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="scripts/lib/linq.js"></script>
     <script src="bower_components/d3/d3.js"></script>
+    <script src="bower_components/jquery-mousewheel/jquery.mousewheel.js"></script>
 
     <script src="scripts/EventAggregator.js"></script>
     <script src="scripts/dimensions.js"></script>
@@ -45,6 +46,7 @@
 
     <script src="scripts/Interaction/KeyboardShortcutManager.js"></script>
     <script src="scripts/Interaction/change-color.js"></script>
+    <script src="scripts/Interaction/zooming.js"></script>
 
     <script src="scripts/SVG/PathBuilder.js"></script>
     <script src="scripts/SVG/PathCommand.js"></script>
