--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -41,6 +41,7 @@
 
     <script src="scripts/EventAggregator.js"></script>
     <script src="scripts/dimensions.js"></script>
+    <script src="scripts/browser-specific.js"></script>
 
     <script src="scripts/Utility/utility.js"></script>
 
