--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -42,11 +42,14 @@
     <script src="scripts/EventAggregator.js"></script>
     <script src="scripts/dimensions.js"></script>
     <script src="scripts/browser-specific.js"></script>
+    <script src="scripts/defaults.js"></script>
+    <script src="scripts/fixed-gear-types.js"></script>
 
     <script src="scripts/Utility/utility.js"></script>
 
-    <script src="scripts/Interaction/KeyboardShortcutManager.js"></script>
     <script src="scripts/Interaction/change-color.js"></script>
+    <script src="scripts/Interaction/gear-drag.js"></script>
+    <script src="scripts/Interaction/KeyboardShortcutManager.js"></script>
 
     <script src="scripts/SVG/PathBuilder.js"></script>
     <script src="scripts/SVG/PathCommand.js"></script>
@@ -55,6 +58,7 @@
     <script src="scripts/SVG/LCommand.js"></script>
     <script src="scripts/SVG/ZCommand.js"></script>
 
+    <script src="scripts/Shapes/Rotater.js"></script>
     <script src="scripts/Shapes/HoleOptions.js"></script>
     <script src="scripts/Shapes/TransformInfo.js"></script>
     <script src="scripts/Shapes/GearHole.js"></script>
@@ -67,17 +71,22 @@
     <script src="scripts/Shapes/RingGearOptionsFactory.js"></script>
     <script src="scripts/Shapes/RingGearRotater.js"></script>
     <script src="scripts/Shapes/BeamOptions.js"></script>
+    <script src="scripts/Shapes/BeamOptionsFactory.js"></script>
     <script src="scripts/Shapes/BeamRotater.js"></script>
     <script src="scripts/Shapes/Beam.js"></script>
 
     <script src="scripts/UI/gear-options-selector.js"></script>
     <script src="scripts/UI/color-selector.js"></script>
+    <script src="scripts/UI/download-image.js"></script>
 
     <script src="scripts/Initialization/initialize-canvas.js"></script>
+    <script src="scripts/Initialization/initialize-color-selections.js"></script>
+    <script src="scripts/Initialization/initialize-fixed-gear.js"></script>
+    <script src="scripts/Initialization/initialize-gear-selections.js"></script>
+    <script src="scripts/Initialization/initialize-holes.js"></script>
+    <script src="scripts/Initialization/initialize-rotating-gear.js"></script>
     <script src="scripts/Initialization/initialize-svg.js"></script>
     <script src="scripts/Initialization/initialize-zoom.js"></script>
-    <script src="scripts/Initialization/initialize-rotating-gear-options.js"></script>
-    <script src="scripts/Initialization/initialize-fixed-gear-options.js"></script>
 
     <script src="scripts/app.js"></script>
 
