--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -18,19 +18,19 @@
 
     <div id="gear-options-selector">
         <div class="fixed-container">
-            <p class="color-changing">fixed</p>
+            <p class="color-changing selector-header selector-header-left">fixed</p>
         </div>
         <div class="rotating-container">
-            <p class="color-changing">rotating</p>
+            <p class="color-changing selector-header selector-header-left">rotating</p>
         </div>
     </div>
 
     <div id="color-selector">
         <div class="foreground-container">
-            <p class="color-changing">pen</p>
+            <p class="color-changing selector-header selector-header-right">pen</p>
         </div>
         <div class="background-container">
-            <p class="color-changing">background</p>
+            <p class="color-changing selector-header selector-header-right">background</p>
         </div>
     </div>
 
