--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -19,28 +19,22 @@
     <div id="gear-options-selector">
         <div class="fixed-container">
             <p class="color-changing selector-header selector-header-left">fixed</p>
-            <div class="scroll-container scrollbar-left">
-                <p></p>
-            </div>
+            <div class="scroll-container scrollbar-left"></div>
         </div>
         <div class="rotating-container">
             <p class="color-changing selector-header selector-header-left">rotating</p>
-            <div class="scroll-container">
-                <p></p>
-            </div>
+            <div class="scroll-container"></div>
         </div>
     </div>
 
     <div id="color-selector">
         <div class="foreground-container">
             <p class="color-changing selector-header selector-header-right">pen</p>
-            <p class="scroll-container"></p>
+            <div class="scroll-container"></div>
         </div>
         <div class="background-container">
             <p class="color-changing selector-header selector-header-right">background</p>
-            <div class="scroll-container">
-                <p></p>
-            </div>
+            <div class="scroll-container"></div>
         </div>
     </div>
 
