--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -19,7 +19,7 @@
     <div id="gear-options-selector">
         <div class="fixed-container">
             <p class="color-changing selector-header selector-header-left">fixed</p>
-            <div class="scroll-container scrollbar-left"></div>
+            <div class="scroll-container scrollbar-left invisible-scrollbar"></div>
         </div>
         <div class="rotating-container">
             <p class="color-changing selector-header selector-header-left">rotating</p>
@@ -34,7 +34,7 @@
         </div>
         <div class="background-container">
             <p class="color-changing selector-header selector-header-right">background</p>
-            <div class="scroll-container"></div>
+            <div class="scroll-container invisible-scrollbar"></div>
         </div>
     </div>
 
