tweaks to gear-selector styles

--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -16,6 +16,7 @@
     <a id="download-link" target="_blank">download image</a>
     <p style="" id="output"></p>
 
+    <div id="gear-options-background-color"></div>
     <div id="gear-options-selector">
         <div class="fixed-container">
             <p class="color-changing selector-header selector-header-left">fixed</p>
@@ -27,6 +28,7 @@
         </div>
     </div>
 
+    <div id="color-options-background-color"></div>
     <div id="color-selector">
         <div class="foreground-container">
             <p class="color-changing selector-header selector-header-right">pen</p>
