styles for selectors finished

--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -32,7 +32,7 @@
     <div id="color-selector">
         <div class="foreground-container">
             <p class="color-changing selector-header selector-header-right">pen</p>
-            <div class="scroll-container"></div>
+            <div class="scroll-container scroll-bar-left"></div>
         </div>
         <div class="background-container">
             <p class="color-changing selector-header selector-header-right">background</p>
