changing of fixed gear complete

--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -57,6 +57,7 @@
     <script src="scripts/Interaction/change-color.js"></script>
     <script src="scripts/Interaction/gear-drag.js"></script>
     <script src="scripts/Interaction/KeyboardShortcutManager.js"></script>
+    <script src="scripts/Interaction/change-fixed-gear.js"></script>
 
     <script src="scripts/SVG/PathBuilder.js"></script>
     <script src="scripts/SVG/PathCommand.js"></script>
@@ -65,6 +66,8 @@
     <script src="scripts/SVG/LCommand.js"></script>
     <script src="scripts/SVG/ZCommand.js"></script>
 
+    <script src="scripts/Shapes/GearRole.js"></script>
+    <script src="scripts/Shapes/GearType.js"></script>
     <script src="scripts/Shapes/Rotater.js"></script>
     <script src="scripts/Shapes/HoleOptions.js"></script>
     <script src="scripts/Shapes/TransformInfo.js"></script>
