--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -58,6 +58,7 @@
     <script src="scripts/Interaction/gear-drag.js"></script>
     <script src="scripts/Interaction/KeyboardShortcutManager.js"></script>
     <script src="scripts/Interaction/change-fixed-gear.js"></script>
+    <script src="scripts/Interaction/change-rotating-gear.js"></script>
 
     <script src="scripts/SVG/PathBuilder.js"></script>
     <script src="scripts/SVG/PathCommand.js"></script>
