--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -59,6 +59,7 @@
     <script src="scripts/Interaction/KeyboardShortcutManager.js"></script>
     <script src="scripts/Interaction/change-fixed-gear.js"></script>
     <script src="scripts/Interaction/change-rotating-gear.js"></script>
+    <script src="scripts/Interaction/remember-last-hole-selection.js"></script>
 
     <script src="scripts/SVG/PathBuilder.js"></script>
     <script src="scripts/SVG/PathCommand.js"></script>
