add build instructions

--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -9,7 +9,7 @@
     <link href="styles/app.css" rel="stylesheet" />
     <link class="dom_munger-ignore" rel="shortcut icon" href="favicon.ico" />
 
-    <title>Spirograph</title>
+    <title>Inspirograph</title>
 
 </head>
 <body class="spirograph">
