started download image functionality

--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -77,6 +77,7 @@
     <script src="scripts/Interaction/remember-last-hole-selection.js"></script>
     <script src="scripts/Interaction/clear-canvas.js"></script>
     <script src="scripts/Interaction/change-gear-visibility.js"></script>
+    <script src="scripts/Interaction/download-image.js"></script>
 
     <script src="scripts/SVG/PathBuilder.js"></script>
     <script src="scripts/SVG/PathCommand.js"></script>
