changed tooltip title

--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -49,6 +49,10 @@
             <i class="fa fa-2x fa-download"></i>
         </button>
 
+        <button id="gallery-button" class="toolbar-button btn btn-default">
+            <i class="fa fa-2x fa-th"></i>
+        </button>
+
         <button id="clear-button" class="toolbar-button btn btn-default">
             <i class="fa fa-2x fa-eraser"></i>
         </button>
