--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -17,7 +17,7 @@
     <p style="" id="output"></p>
 
     <div id="gear-options-background-color"></div>
-    <div id="gear-options-selector">
+    <div id="gear-options-selector" class="lower-during-drag">
         <div class="fixed-container">
             <p class="color-changing selector-header selector-header-left">fixed</p>
             <div class="scroll-container scrollbar-left invisible-scrollbar"></div>
@@ -29,7 +29,7 @@
     </div>
 
     <div id="color-options-background-color"></div>
-    <div id="color-selector">
+    <div id="color-selector" class="lower-during-drag">
         <div class="foreground-container">
             <p class="color-changing selector-header selector-header-right" style="margin-right: 17px">pen</p>
             <div class="scroll-container scroll-bar-left"></div>
@@ -40,7 +40,7 @@
         </div>
     </div>
 
-    <div id="toolbar-container">
+    <div id="toolbar-container" class="lower-during-drag">
         <button id="show-hide-gears-button" class="toolbar-button btn btn-default" data-toggle="button">
             <i class="fa fa-2x fa-eye"></i>
         </button>
@@ -65,6 +65,7 @@
     <script src="bower_components/jscrollpane/script/jquery.jscrollpane.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
+    <script src="scripts/globals.js"></script>
     <script src="scripts/EventAggregator.js"></script>
     <script src="scripts/dimensions.js"></script>
     <script src="scripts/browser-specific.js"></script>
@@ -82,6 +83,7 @@
     <script src="scripts/Interaction/clear-canvas.js"></script>
     <script src="scripts/Interaction/change-gear-visibility.js"></script>
     <script src="scripts/Interaction/download-image.js"></script>
+    <script src="scripts/Interaction/lower-UI-when-dragging.js"></script>
 
     <script src="scripts/SVG/PathBuilder.js"></script>
     <script src="scripts/SVG/PathCommand.js"></script>
@@ -123,6 +125,7 @@
     <script src="scripts/Initialization/initialize-rotating-gear.js"></script>
     <script src="scripts/Initialization/initialize-svg.js"></script>
     <script src="scripts/Initialization/initialize-zoom.js"></script>
+    <script src="scripts/Initialization/initialize-cursor-tracker.js"></script>
 
     <script src="scripts/app.js"></script>
 
