added color picker UI

--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -64,6 +64,7 @@
     <script src="bower_components/jquery-mousewheel/jquery.mousewheel.js"></script>
     <script src="bower_components/jscrollpane/script/jquery.jscrollpane.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="bower_components/spectrum/spectrum.js"></script>
 
     <script src="scripts/globals.js"></script>
     <script src="scripts/EventAggregator.js"></script>
@@ -111,6 +112,7 @@
     <script src="scripts/Shapes/BeamRotater.js"></script>
     <script src="scripts/Shapes/Beam.js"></script>
 
+    <script src="scripts/UI/custom-color-picker.js"></script>
     <script src="scripts/UI/gear-options-selector.js"></script>
     <script src="scripts/UI/color-selector.js"></script>
     <script src="scripts/UI/download-image.js"></script>
