color related bug fixes

--- a/Spirograph/index.html
+++ b/Spirograph/index.html
@@ -74,6 +74,7 @@
     <script src="scripts/fixed-gear-types.js"></script>
 
     <script src="scripts/Utility/utility.js"></script>
+    <script src="scripts/Utility/to-color-object.js"></script>
 
     <script src="scripts/Interaction/change-color.js"></script>
     <script src="scripts/Interaction/gear-drag.js"></script>
